--- a/modules/css/modals.scss
+++ b/modules/css/modals.scss
@@ -1,13 +1,16 @@
 #popin_showSettings,
 .goldncrash_popin_cards,
-.goldncrash_discard_popin {
+.goldncrash_discard_popin,
+.goldncrash_treasure_popin {
     background-color: #ebd5bd;
     border-radius: 8px;
     box-shadow: 0 3px 8px black;
     position: relative;
 
     .goldncrash_popin_closeicon,
-    .goldncrash_popin_cards_closeicon {
+    .goldncrash_popin_cards_closeicon,
+    .goldncrash_discard_popin_closeicon,
+    .goldncrash_treasure_popin_closeicon {
         background-color: #a47a77;
         border-radius: 50%;
         width: 40px;
@@ -50,6 +53,21 @@
     width: 700px;
     padding: 15px;
     .discard {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+
+        .goldncrash-card {
+            margin: 5px;
+        }
+    }
+}
+
+.treasure-modal {
+    width: 700px;
+    padding: 15px;
+    .treasure {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
